--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -25,12 +25,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicon icon -->
+    <link rel="icon" type="image/png" href="~/images/favicon.png">
+    <link href="~/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/2.0/LineIcons.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" href="../images/favicon.png">
-    <link href="../vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
-    <link href="../2.0/LineIcons.css" rel="stylesheet" type="text/css"/>
-    <link href="../css/style.css" rel="stylesheet" type="text/css"/>
-
+    <!-- Required vendors -->
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
 
@@ -46,13 +48,12 @@
     </div>
     <div id="main-wrapper">
         <div class="nav-header">
-
-            <a href="index-2.html" class="brand-logo">
-                <img class="logo-abbr" src="../images/logo-text2.png" alt="">
-                <img class="logo-compact" src="../images/logo-text.png" alt="">
-                <img class="brand-title" src="../images/logo-text.png" alt="">
-            </a>
-
+            @*logo*@
+            @*  <a href="index-2.html" class="brand-logo">
+            <img class="logo-abbr" src="~/images/logo-text2.png" alt="">
+            <img class="logo-compact" src="~/images/logo-text.png" alt="">
+            <img class="brand-title" src="~/images/logo-text.png" alt="">
+            </a>*@
             <div class="nav-control">
                 <div class="hamburger">
                     <span class="line"></span><span class="line"></span><span class="line"></span>
@@ -752,17 +753,13 @@
             </div>*@
         </div>
     </div>
-
-
-    <!-- Required vendors -->
-    <script src="../vendor/global/global.min.js" type="text/javascript"></script>
-    <script src="../vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
-    <script src="../vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
-    <script src="../vendor/apexchart/apexchart.js" type="text/javascript"></script>
-    <script src="../js/dashboard/dashboard-1.js" type="text/javascript"></script>
-    <script src="../js/custom.min.js" type="text/javascript"></script>
-    <script src="../js/deznav-init.js" type="text/javascript"></script>
-
+    <script src="~/vendor/global/global.min.js" type="text/javascript"></script>
+    @*<script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>*@
+    <script src="~/vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
+    <script src="~/vendor/apexchart/apexchart.js" type="text/javascript"></script>
+    <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
+    <script src="~/js/custom.min.js" type="text/javascript"></script>
+    <script src="~/js/deznav-init.js" type="text/javascript"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="~/vendor/sweetalert2/dist/sweetalert2.min.js"></script>
