--- a/Views/Admin/Ingredients.cshtml
+++ b/Views/Admin/Ingredients.cshtml
@@ -43,16 +43,14 @@
 					<div class="card-body review-table p-0 border-0" id="content">
 					</div>
 					</div>
-					<div class="card-footer border-0 pt-0 text-center">
+					<div class="card-footer border-0 pt-0 mt-3 text-center">
 						<ul class="pagination pagination-gutter pagination-primary no-bg" id="pageList">
 						</ul>
 					</div>
 				</div>
 			</div>
 		</div>
-		 <div class="card">
-			
-		</div>
+		
 	</div>
 </div>
 @section Script{
