--- a/Views/Admin/RecipesByAdmin.cshtml
+++ b/Views/Admin/RecipesByAdmin.cshtml
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="form-head d-flex mb-3 mb-lg-5 align-items-start">
            <div class="me-auto d-none d-lg-block">
-				<a class="text-primary d-flex align-items-center mb-3 font-w500" href="index-2.html">
+				<a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
 				<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989"/>
 				</svg>
