--- a/Views/Home/FAQ.cshtml
+++ b/Views/Home/FAQ.cshtml
@@ -204,9 +204,7 @@
 									<div class="elementskit-card-header" id="primaryHeading-0-b1dd9e8">
 										<a href="#collapse-a645a6564f05f904a7bc" class="ekit-accordion--toggler elementskit-btn-link collapsed" data-ekit-toggle="collapse" data-target="#Collapse-a645a6564f05f904a7bc" aria-expanded="true" aria-controls="Collapse-a645a6564f05f904a7bc">
 
-											<span class="ekit-accordion-title">Semper vestibulum dis eu ipsum elementum?</span>
-
-
+												<span class="ekit-accordion-title">How to become the member of this site?</span>
 											<div class="ekit_accordion_icon_group">
 												<div class="ekit_accordion_normal_icon">
 													<!-- Normal Icon -->
@@ -227,7 +225,7 @@
 									<div id="Collapse-a645a6564f05f904a7bc" class=" show collapse" aria-labelledby="primaryHeading-0-b1dd9e8" data-parent="#accordion-64f05f904a7bc">
 
 										<div class="elementskit-card-body ekit-accordion--content">
-											<p>Class sagittis semper vivamus adipiscing ipsum sociosqu nostra pellentesque ut ullamcorper magna. Curabitur pede nam lacinia scelerisque id pellentesque malesuada vel si maecenas. Aliquam ridiculus hendrerit phasellus cubilia fames dui parturient praesent sed vitae facilisis.</p>
+											<p>You need to register with our website at Pring plan with many incentives to become our member.</p>
 										</div>
 
 									</div>
@@ -239,7 +237,7 @@
 									<div class="elementskit-card-header" id="primaryHeading-1-b1dd9e8">
 										<a href="#collapse-c20708164f05f904a7bc" class="ekit-accordion--toggler elementskit-btn-link collapsed" data-ekit-toggle="collapse" data-target="#Collapse-c20708164f05f904a7bc" aria-expanded="false" aria-controls="Collapse-c20708164f05f904a7bc">
 
-											<span class="ekit-accordion-title">Bibendum magna nulla porttitor ridiculus vivamus?</span>
+												<span class="ekit-accordion-title">Will there be any subscription charges?</span>
 
 
 											<div class="ekit_accordion_icon_group">
@@ -262,7 +260,7 @@
 									<div id="Collapse-c20708164f05f904a7bc" class=" collapse" aria-labelledby="primaryHeading-1-b1dd9e8" data-parent="#accordion-64f05f904a7bc">
 
 										<div class="elementskit-card-body ekit-accordion--content">
-											<p>Class sagittis semper vivamus adipiscing ipsum sociosqu nostra pellentesque ut ullamcorper magna. Curabitur pede nam lacinia scelerisque id pellentesque malesuada vel si maecenas. Aliquam ridiculus hendrerit phasellus cubilia fames dui parturient praesent sed vitae facilisis.</p>
+												<p>You will be charged a fee when you sign up to become our monthly or yearly member.</p>
 										</div>
 
 									</div>
@@ -274,7 +272,7 @@
 									<div class="elementskit-card-header" id="primaryHeading-2-b1dd9e8">
 										<a href="#collapse-807a01c64f05f904a7bc" class="ekit-accordion--toggler elementskit-btn-link collapsed" data-ekit-toggle="collapse" data-target="#Collapse-807a01c64f05f904a7bc" aria-expanded="false" aria-controls="Collapse-807a01c64f05f904a7bc">
 
-											<span class="ekit-accordion-title">Ipsum netus accumsan imperdiet ut viverra?</span>
+											<span class="ekit-accordion-title">How to view the recipes and tips And Will there be any charges for that?</span>
 
 
 											<div class="ekit_accordion_icon_group">
@@ -297,7 +295,7 @@
 									<div id="Collapse-807a01c64f05f904a7bc" class=" collapse" aria-labelledby="primaryHeading-2-b1dd9e8" data-parent="#accordion-64f05f904a7bc">
 
 										<div class="elementskit-card-body ekit-accordion--content">
-											<p>Class sagittis semper vivamus adipiscing ipsum sociosqu nostra pellentesque ut ullamcorper magna. Curabitur pede nam lacinia scelerisque id pellentesque malesuada vel si maecenas. Aliquam ridiculus hendrerit phasellus cubilia fames dui parturient praesent sed vitae facilisis.</p>
+												<p>You just need to visit our website right and check out the free recipes and tips, there will be no additional charges and you can also give us feedback.</p>
 										</div>
 
 									</div>
@@ -309,7 +307,10 @@
 									<div class="elementskit-card-header" id="primaryHeading-3-b1dd9e8">
 										<a href="#collapse-d2b640964f05f904a7bc" class="ekit-accordion--toggler elementskit-btn-link collapsed" data-ekit-toggle="collapse" data-target="#Collapse-d2b640964f05f904a7bc" aria-expanded="false" aria-controls="Collapse-d2b640964f05f904a7bc">
 
-											<span class="ekit-accordion-title">Natoque ultricies torquent nibh porttitor eleifend?</span>
+												<span class="ekit-accordion-title">
+													I am not the registered member of the site. Can I participate in the
+													contest held?
+												</span>
 
 
 											<div class="ekit_accordion_icon_group">
@@ -332,7 +333,11 @@
 									<div id="Collapse-d2b640964f05f904a7bc" class=" collapse" aria-labelledby="primaryHeading-3-b1dd9e8" data-parent="#accordion-64f05f904a7bc">
 
 										<div class="elementskit-card-body ekit-accordion--content">
-											<p>Class sagittis semper vivamus adipiscing ipsum sociosqu nostra pellentesque ut ullamcorper magna. Curabitur pede nam lacinia scelerisque id pellentesque malesuada vel si maecenas. Aliquam ridiculus hendrerit phasellus cubilia fames dui parturient praesent sed vitae facilisis.</p>
+												<p>
+													Competitions can be viewed and entered by submitting
+													cooking tips and recipes along with list of ingredients and
+													cooking process.
+												</p>
 										</div>
 
 									</div>
@@ -344,7 +349,7 @@
 									<div class="elementskit-card-header" id="primaryHeading-4-b1dd9e8">
 										<a href="#collapse-4952d6564f05f904a7bc" class="ekit-accordion--toggler elementskit-btn-link collapsed" data-ekit-toggle="collapse" data-target="#Collapse-4952d6564f05f904a7bc" aria-expanded="false" aria-controls="Collapse-4952d6564f05f904a7bc">
 
-											<span class="ekit-accordion-title">Velit molestie tincidunt aenean orci sed?</span>
+												<span class="ekit-accordion-title">I have posted a recipe or a tip with respect to the contest. How can I know who is the winner?</span>
 
 
 											<div class="ekit_accordion_icon_group">
@@ -367,7 +372,11 @@
 									<div id="Collapse-4952d6564f05f904a7bc" class=" collapse" aria-labelledby="primaryHeading-4-b1dd9e8" data-parent="#accordion-64f05f904a7bc">
 
 										<div class="elementskit-card-body ekit-accordion--content">
-											<p>Class sagittis semper vivamus adipiscing ipsum sociosqu nostra pellentesque ut ullamcorper magna. Curabitur pede nam lacinia scelerisque id pellentesque malesuada vel si maecenas. Aliquam ridiculus hendrerit phasellus cubilia fames dui parturient praesent sed vitae facilisis.</p>
+												<p>
+													People with the best will
+													receive price. Once the recipes and tips are posted, we will
+													announce the winner after reviewing each of them.
+												</p>
 										</div>
 
 									</div>
